debugged app.js to render manager info properly

--- a/output/team.html
+++ b/output/team.html
@@ -1,5 +1,4 @@
-
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -24,13 +23,23 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                SHelby
+                <div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">fasfg</h2>
+        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: ASGFEAGT</li>
+            <li class="list-group-item">Email: <a href="mailto:ASFSAFR">ASFSAFR</a></li>
+            <li class="list-group-item">Office number: 13</li>
+        </ul>
+    </div>
+</div>
+
             </div>
         </div>
     </div>
 </body>
 
 </html>
-
-
-    
