engineer prompts finished

--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">fasfg</h2>
+        <h2 class="card-title">sarah</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: ASGFEAGT</li>
-            <li class="list-group-item">Email: <a href="mailto:ASFSAFR">ASFSAFR</a></li>
-            <li class="list-group-item">Office number: 13</li>
+            <li class="list-group-item">ID: 45</li>
+            <li class="list-group-item">Email: <a href="mailto:fdklsaf@fjhklasd.com">fdklsaf@fjhklasd.com</a></li>
+            <li class="list-group-item">Office number: 4</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">doid</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 354</li>
+            <li class="list-group-item">Email: <a href="mailto:fhjkad@hello.com">fhjkad@hello.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/dfjaw" target="_blank" rel="noopener noreferrer">dfjaw</a></li>
         </ul>
     </div>
 </div>
