--- a/output/team.html
+++ b/output/team.html
@@ -25,27 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">sarah</h2>
+        <h2 class="card-title">carl</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 45</li>
-            <li class="list-group-item">Email: <a href="mailto:fdklsaf@fjhklasd.com">fdklsaf@fjhklasd.com</a></li>
-            <li class="list-group-item">Office number: 4</li>
+            <li class="list-group-item">ID: 5</li>
+            <li class="list-group-item">Email: <a href="mailto:carl@hello.com">carl@hello.com</a></li>
+            <li class="list-group-item">Office number: 6</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">doid</h2>
+        <h2 class="card-title">bob</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 354</li>
-            <li class="list-group-item">Email: <a href="mailto:fhjkad@hello.com">fhjkad@hello.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/dfjaw" target="_blank" rel="noopener noreferrer">dfjaw</a></li>
+            <li class="list-group-item">ID: 456</li>
+            <li class="list-group-item">Email: <a href="mailto:bob@hello.com">bob@hello.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/bobber" target="_blank" rel="noopener noreferrer">bobber</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">shelby</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 56</li>
+            <li class="list-group-item">Email: <a href="mailto:shelby@hello.com">shelby@hello.com</a></li>
+            <li class="list-group-item">School: columbia</li>
         </ul>
     </div>
 </div>
