styling for main team page

--- a/output/team.html
+++ b/output/team.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid my-top mb-3">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 team-heading">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">carl</h2>
+        <h2 class="card-title">sarah</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:carl@hello.com">carl@hello.com</a></li>
-            <li class="list-group-item">Office number: 6</li>
+            <li class="list-group-item">ID: sad</li>
+            <li class="list-group-item">Email: <a href="mailto:fklasfhjksafklas">fklasfhjksafklas</a></li>
+            <li class="list-group-item">Office number: das</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">bob</h2>
+        <h2 class="card-title">dfaws</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 456</li>
-            <li class="list-group-item">Email: <a href="mailto:bob@hello.com">bob@hello.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/bobber" target="_blank" rel="noopener noreferrer">bobber</a></li>
+            <li class="list-group-item">ID: wrwq</li>
+            <li class="list-group-item">Email: <a href="mailto:rftweqrqwe">rftweqrqwe</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/dsasa" target="_blank" rel="noopener noreferrer">dsasa</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">shelby</h2>
+        <h2 class="card-title">swadas</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 56</li>
-            <li class="list-group-item">Email: <a href="mailto:shelby@hello.com">shelby@hello.com</a></li>
-            <li class="list-group-item">School: columbia</li>
+            <li class="list-group-item">ID: asfas</li>
+            <li class="list-group-item">Email: <a href="mailto:safas">safas</a></li>
+            <li class="list-group-item">School: asfa</li>
         </ul>
     </div>
 </div>
