READme polished and demo video added

--- a/output/team.html
+++ b/output/team.html
@@ -25,40 +25,53 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">sarah</h2>
+        <h2 class="card-title">Shelby</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: sad</li>
-            <li class="list-group-item">Email: <a href="mailto:fklasfhjksafklas">fklasfhjksafklas</a></li>
-            <li class="list-group-item">Office number: das</li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:shelby@hello.com">shelby@hello.com</a></li>
+            <li class="list-group-item">Office number: 45</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">dfaws</h2>
+        <h2 class="card-title">Joe</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: wrwq</li>
-            <li class="list-group-item">Email: <a href="mailto:rftweqrqwe">rftweqrqwe</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/dsasa" target="_blank" rel="noopener noreferrer">dsasa</a></li>
+            <li class="list-group-item">ID: 5</li>
+            <li class="list-group-item">Email: <a href="mailto:joe@hello.com">joe@hello.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/joe0202" target="_blank" rel="noopener noreferrer">joe0202</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">swadas</h2>
+        <h2 class="card-title">Chai</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: asfas</li>
-            <li class="list-group-item">Email: <a href="mailto:safas">safas</a></li>
-            <li class="list-group-item">School: asfa</li>
+            <li class="list-group-item">ID: 6</li>
+            <li class="list-group-item">Email: <a href="mailto:Chai@yahoo.com">Chai@yahoo.com</a></li>
+            <li class="list-group-item">School: UCSD</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">Sage</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 7</li>
+            <li class="list-group-item">Email: <a href="mailto:Sage@yahoo.com">Sage@yahoo.com</a></li>
+            <li class="list-group-item">School: SDSU</li>
         </ul>
     </div>
 </div>
